# serializer version: 1
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.1
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.10
  '''
  SELECT "insights_filesystemshortcut"."id",
         "insights_filesystemshortcut"."team_id",
         "insights_filesystemshortcut"."user_id",
         "insights_filesystemshortcut"."path",
         "insights_filesystemshortcut"."type",
         "insights_filesystemshortcut"."ref",
         "insights_filesystemshortcut"."href",
         "insights_filesystemshortcut"."created_at"
  FROM "insights_filesystemshortcut"
  WHERE ("insights_filesystemshortcut"."ref" = '0001'
         AND "insights_filesystemshortcut"."team_id" = 99999
         AND "insights_filesystemshortcut"."type" = 'feature_flag'
         AND NOT ("insights_filesystemshortcut"."path" = 'flag-1'
                  AND "insights_filesystemshortcut"."href" = '__skipped__'
                  AND "insights_filesystemshortcut"."href" IS NOT NULL))
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.11
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.12
  '''
  SELECT "insights_featureflagevaluationtag"."id",
         "insights_featureflagevaluationtag"."feature_flag_id",
         "insights_featureflagevaluationtag"."tag_id",
         "insights_featureflagevaluationtag"."created_at"
  FROM "insights_featureflagevaluationtag"
  WHERE "insights_featureflagevaluationtag"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.13
  '''
  SELECT "insights_featureflagevaluationtag"."id",
         "insights_featureflagevaluationtag"."feature_flag_id",
         "insights_featureflagevaluationtag"."tag_id",
         "insights_featureflagevaluationtag"."created_at"
  FROM "insights_featureflagevaluationtag"
  WHERE "insights_featureflagevaluationtag"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.14
  '''
  SELECT "insights_survey"."id",
         "insights_survey"."team_id",
         "insights_survey"."name",
         "insights_survey"."description",
         "insights_survey"."linked_flag_id",
         "insights_survey"."targeting_flag_id",
         "insights_survey"."linked_insight_id",
         "insights_survey"."internal_targeting_flag_id",
         "insights_survey"."internal_response_sampling_flag_id",
         "insights_survey"."type",
         "insights_survey"."conditions",
         "insights_survey"."questions",
         "insights_survey"."appearance",
         "insights_survey"."created_at",
         "insights_survey"."created_by_id",
         "insights_survey"."start_date",
         "insights_survey"."end_date",
         "insights_survey"."updated_at",
         "insights_survey"."archived",
         "insights_survey"."responses_limit",
         "insights_survey"."response_sampling_start_date",
         "insights_survey"."response_sampling_interval_type",
         "insights_survey"."response_sampling_interval",
         "insights_survey"."response_sampling_limit",
         "insights_survey"."response_sampling_daily_limits",
         "insights_survey"."iteration_count",
         "insights_survey"."iteration_frequency_days",
         "insights_survey"."iteration_start_dates",
         "insights_survey"."current_iteration",
         "insights_survey"."current_iteration_start_date",
         "insights_survey"."schedule",
         "insights_survey"."enable_partial_responses",
         "insights_survey"."enable_iframe_embedding",
         "insights_survey"."headline_summary",
         "insights_survey"."headline_response_count",
         "insights_survey"."question_summaries",
         "insights_survey"."form_content"
  FROM "insights_survey"
  WHERE "insights_survey"."internal_response_sampling_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.15
  '''
  SELECT "insights_survey"."id",
         "insights_survey"."team_id",
         "insights_survey"."name",
         "insights_survey"."description",
         "insights_survey"."linked_flag_id",
         "insights_survey"."targeting_flag_id",
         "insights_survey"."linked_insight_id",
         "insights_survey"."internal_targeting_flag_id",
         "insights_survey"."internal_response_sampling_flag_id",
         "insights_survey"."type",
         "insights_survey"."conditions",
         "insights_survey"."questions",
         "insights_survey"."appearance",
         "insights_survey"."created_at",
         "insights_survey"."created_by_id",
         "insights_survey"."start_date",
         "insights_survey"."end_date",
         "insights_survey"."updated_at",
         "insights_survey"."archived",
         "insights_survey"."responses_limit",
         "insights_survey"."response_sampling_start_date",
         "insights_survey"."response_sampling_interval_type",
         "insights_survey"."response_sampling_interval",
         "insights_survey"."response_sampling_limit",
         "insights_survey"."response_sampling_daily_limits",
         "insights_survey"."iteration_count",
         "insights_survey"."iteration_frequency_days",
         "insights_survey"."iteration_start_dates",
         "insights_survey"."current_iteration",
         "insights_survey"."current_iteration_start_date",
         "insights_survey"."schedule",
         "insights_survey"."enable_partial_responses",
         "insights_survey"."enable_iframe_embedding",
         "insights_survey"."headline_summary",
         "insights_survey"."headline_response_count",
         "insights_survey"."question_summaries",
         "insights_survey"."form_content"
  FROM "insights_survey"
  WHERE "insights_survey"."internal_response_sampling_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.16
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id"
  FROM "insights_taggeditem"
  WHERE "insights_taggeditem"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.17
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id"
  FROM "insights_taggeditem"
  WHERE "insights_taggeditem"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.18
  '''
  SELECT "ee_featureflagroleaccess"."id",
         "ee_featureflagroleaccess"."feature_flag_id",
         "ee_featureflagroleaccess"."role_id",
         "ee_featureflagroleaccess"."added_at",
         "ee_featureflagroleaccess"."updated_at"
  FROM "ee_featureflagroleaccess"
  WHERE "ee_featureflagroleaccess"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.19
  '''
  SELECT "ee_featureflagroleaccess"."id",
         "ee_featureflagroleaccess"."feature_flag_id",
         "ee_featureflagroleaccess"."role_id",
         "ee_featureflagroleaccess"."added_at",
         "ee_featureflagroleaccess"."updated_at"
  FROM "ee_featureflagroleaccess"
  WHERE "ee_featureflagroleaccess"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.2
  '''
  SELECT "insights_scheduledchange"."id",
         "insights_scheduledchange"."record_id",
         "insights_scheduledchange"."model_name",
         "insights_scheduledchange"."payload",
         "insights_scheduledchange"."scheduled_at",
         "insights_scheduledchange"."executed_at",
         "insights_scheduledchange"."failure_reason",
         "insights_scheduledchange"."failure_count",
         "insights_scheduledchange"."is_recurring",
         "insights_scheduledchange"."recurrence_interval",
         "insights_scheduledchange"."last_executed_at",
         "insights_scheduledchange"."end_date",
         "insights_scheduledchange"."team_id",
         "insights_scheduledchange"."created_at",
         "insights_scheduledchange"."created_by_id",
         "insights_scheduledchange"."updated_at"
  FROM "insights_scheduledchange"
  WHERE ("insights_scheduledchange"."executed_at" IS NULL
         AND "insights_scheduledchange"."scheduled_at" <= '2023-12-21 09:00:00+00:00'::timestamptz)
  ORDER BY "insights_scheduledchange"."scheduled_at" ASC
  LIMIT 10000
  FOR
  UPDATE NOWAIT
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.20
  '''
  SELECT "insights_experiment"."id",
         "insights_experiment"."name",
         "insights_experiment"."description",
         "insights_experiment"."team_id",
         "insights_experiment"."filters",
         "insights_experiment"."parameters",
         "insights_experiment"."secondary_metrics",
         "insights_experiment"."created_by_id",
         "insights_experiment"."feature_flag_id",
         "insights_experiment"."exposure_cohort_id",
         "insights_experiment"."holdout_id",
         "insights_experiment"."start_date",
         "insights_experiment"."end_date",
         "insights_experiment"."created_at",
         "insights_experiment"."updated_at",
         "insights_experiment"."archived",
         "insights_experiment"."deleted",
         "insights_experiment"."type",
         "insights_experiment"."variants",
         "insights_experiment"."exposure_criteria",
         "insights_experiment"."metrics",
         "insights_experiment"."metrics_secondary",
         "insights_experiment"."primary_metrics_ordered_uuids",
         "insights_experiment"."secondary_metrics_ordered_uuids",
         "insights_experiment"."stats_config",
         "insights_experiment"."scheduling_config",
         "insights_experiment"."exposure_preaggregation_enabled",
         "insights_experiment"."conclusion",
         "insights_experiment"."conclusion_comment"
  FROM "insights_experiment"
  WHERE "insights_experiment"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.21
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.22
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.23
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.24
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.25
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.26
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.27
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.28
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  ORDER BY "insights_featureflag"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.29
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.3
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.30
  '''
  SELECT "insights_filesystemshortcut"."id",
         "insights_filesystemshortcut"."team_id",
         "insights_filesystemshortcut"."user_id",
         "insights_filesystemshortcut"."path",
         "insights_filesystemshortcut"."type",
         "insights_filesystemshortcut"."ref",
         "insights_filesystemshortcut"."href",
         "insights_filesystemshortcut"."created_at"
  FROM "insights_filesystemshortcut"
  WHERE ("insights_filesystemshortcut"."ref" = '0001'
         AND "insights_filesystemshortcut"."team_id" = 99999
         AND "insights_filesystemshortcut"."type" = 'feature_flag'
         AND NOT ("insights_filesystemshortcut"."path" = 'flag-1'
                  AND "insights_filesystemshortcut"."href" = '__skipped__'
                  AND "insights_filesystemshortcut"."href" IS NOT NULL))
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.31
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.32
  '''
  SELECT "insights_featureflagevaluationtag"."id",
         "insights_featureflagevaluationtag"."feature_flag_id",
         "insights_featureflagevaluationtag"."tag_id",
         "insights_featureflagevaluationtag"."created_at"
  FROM "insights_featureflagevaluationtag"
  WHERE "insights_featureflagevaluationtag"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.33
  '''
  SELECT "insights_featureflagevaluationtag"."id",
         "insights_featureflagevaluationtag"."feature_flag_id",
         "insights_featureflagevaluationtag"."tag_id",
         "insights_featureflagevaluationtag"."created_at"
  FROM "insights_featureflagevaluationtag"
  WHERE "insights_featureflagevaluationtag"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.34
  '''
  SELECT "insights_survey"."id",
         "insights_survey"."team_id",
         "insights_survey"."name",
         "insights_survey"."description",
         "insights_survey"."linked_flag_id",
         "insights_survey"."targeting_flag_id",
         "insights_survey"."linked_insight_id",
         "insights_survey"."internal_targeting_flag_id",
         "insights_survey"."internal_response_sampling_flag_id",
         "insights_survey"."type",
         "insights_survey"."conditions",
         "insights_survey"."questions",
         "insights_survey"."appearance",
         "insights_survey"."created_at",
         "insights_survey"."created_by_id",
         "insights_survey"."start_date",
         "insights_survey"."end_date",
         "insights_survey"."updated_at",
         "insights_survey"."archived",
         "insights_survey"."responses_limit",
         "insights_survey"."response_sampling_start_date",
         "insights_survey"."response_sampling_interval_type",
         "insights_survey"."response_sampling_interval",
         "insights_survey"."response_sampling_limit",
         "insights_survey"."response_sampling_daily_limits",
         "insights_survey"."iteration_count",
         "insights_survey"."iteration_frequency_days",
         "insights_survey"."iteration_start_dates",
         "insights_survey"."current_iteration",
         "insights_survey"."current_iteration_start_date",
         "insights_survey"."schedule",
         "insights_survey"."enable_partial_responses",
         "insights_survey"."enable_iframe_embedding",
         "insights_survey"."headline_summary",
         "insights_survey"."headline_response_count",
         "insights_survey"."question_summaries",
         "insights_survey"."form_content"
  FROM "insights_survey"
  WHERE "insights_survey"."internal_response_sampling_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.35
  '''
  SELECT "insights_survey"."id",
         "insights_survey"."team_id",
         "insights_survey"."name",
         "insights_survey"."description",
         "insights_survey"."linked_flag_id",
         "insights_survey"."targeting_flag_id",
         "insights_survey"."linked_insight_id",
         "insights_survey"."internal_targeting_flag_id",
         "insights_survey"."internal_response_sampling_flag_id",
         "insights_survey"."type",
         "insights_survey"."conditions",
         "insights_survey"."questions",
         "insights_survey"."appearance",
         "insights_survey"."created_at",
         "insights_survey"."created_by_id",
         "insights_survey"."start_date",
         "insights_survey"."end_date",
         "insights_survey"."updated_at",
         "insights_survey"."archived",
         "insights_survey"."responses_limit",
         "insights_survey"."response_sampling_start_date",
         "insights_survey"."response_sampling_interval_type",
         "insights_survey"."response_sampling_interval",
         "insights_survey"."response_sampling_limit",
         "insights_survey"."response_sampling_daily_limits",
         "insights_survey"."iteration_count",
         "insights_survey"."iteration_frequency_days",
         "insights_survey"."iteration_start_dates",
         "insights_survey"."current_iteration",
         "insights_survey"."current_iteration_start_date",
         "insights_survey"."schedule",
         "insights_survey"."enable_partial_responses",
         "insights_survey"."enable_iframe_embedding",
         "insights_survey"."headline_summary",
         "insights_survey"."headline_response_count",
         "insights_survey"."question_summaries",
         "insights_survey"."form_content"
  FROM "insights_survey"
  WHERE "insights_survey"."internal_response_sampling_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.36
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id"
  FROM "insights_taggeditem"
  WHERE "insights_taggeditem"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.37
  '''
  SELECT "insights_taggeditem"."id",
         "insights_taggeditem"."tag_id",
         "insights_taggeditem"."dashboard_id",
         "insights_taggeditem"."insight_id",
         "insights_taggeditem"."event_definition_id",
         "insights_taggeditem"."property_definition_id",
         "insights_taggeditem"."action_id",
         "insights_taggeditem"."feature_flag_id",
         "insights_taggeditem"."experiment_saved_metric_id"
  FROM "insights_taggeditem"
  WHERE "insights_taggeditem"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.38
  '''
  SELECT "ee_featureflagroleaccess"."id",
         "ee_featureflagroleaccess"."feature_flag_id",
         "ee_featureflagroleaccess"."role_id",
         "ee_featureflagroleaccess"."added_at",
         "ee_featureflagroleaccess"."updated_at"
  FROM "ee_featureflagroleaccess"
  WHERE "ee_featureflagroleaccess"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.39
  '''
  SELECT "ee_featureflagroleaccess"."id",
         "ee_featureflagroleaccess"."feature_flag_id",
         "ee_featureflagroleaccess"."role_id",
         "ee_featureflagroleaccess"."added_at",
         "ee_featureflagroleaccess"."updated_at"
  FROM "ee_featureflagroleaccess"
  WHERE "ee_featureflagroleaccess"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.4
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.40
  '''
  SELECT "insights_experiment"."id",
         "insights_experiment"."name",
         "insights_experiment"."description",
         "insights_experiment"."team_id",
         "insights_experiment"."filters",
         "insights_experiment"."parameters",
         "insights_experiment"."secondary_metrics",
         "insights_experiment"."created_by_id",
         "insights_experiment"."feature_flag_id",
         "insights_experiment"."exposure_cohort_id",
         "insights_experiment"."holdout_id",
         "insights_experiment"."start_date",
         "insights_experiment"."end_date",
         "insights_experiment"."created_at",
         "insights_experiment"."updated_at",
         "insights_experiment"."archived",
         "insights_experiment"."deleted",
         "insights_experiment"."type",
         "insights_experiment"."variants",
         "insights_experiment"."exposure_criteria",
         "insights_experiment"."metrics",
         "insights_experiment"."metrics_secondary",
         "insights_experiment"."primary_metrics_ordered_uuids",
         "insights_experiment"."secondary_metrics_ordered_uuids",
         "insights_experiment"."stats_config",
         "insights_experiment"."scheduling_config",
         "insights_experiment"."exposure_preaggregation_enabled",
         "insights_experiment"."conclusion",
         "insights_experiment"."conclusion_comment"
  FROM "insights_experiment"
  WHERE "insights_experiment"."feature_flag_id" = 99999
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.41
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.42
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.43
  '''
  SELECT "insights_scheduledchange"."id",
         "insights_scheduledchange"."record_id",
         "insights_scheduledchange"."model_name",
         "insights_scheduledchange"."payload",
         "insights_scheduledchange"."scheduled_at",
         "insights_scheduledchange"."executed_at",
         "insights_scheduledchange"."failure_reason",
         "insights_scheduledchange"."failure_count",
         "insights_scheduledchange"."is_recurring",
         "insights_scheduledchange"."recurrence_interval",
         "insights_scheduledchange"."last_executed_at",
         "insights_scheduledchange"."end_date",
         "insights_scheduledchange"."team_id",
         "insights_scheduledchange"."created_at",
         "insights_scheduledchange"."created_by_id",
         "insights_scheduledchange"."updated_at"
  FROM "insights_scheduledchange"
  WHERE "insights_scheduledchange"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.44
  '''
  SELECT "insights_scheduledchange"."id",
         "insights_scheduledchange"."record_id",
         "insights_scheduledchange"."model_name",
         "insights_scheduledchange"."payload",
         "insights_scheduledchange"."scheduled_at",
         "insights_scheduledchange"."executed_at",
         "insights_scheduledchange"."failure_reason",
         "insights_scheduledchange"."failure_count",
         "insights_scheduledchange"."is_recurring",
         "insights_scheduledchange"."recurrence_interval",
         "insights_scheduledchange"."last_executed_at",
         "insights_scheduledchange"."end_date",
         "insights_scheduledchange"."team_id",
         "insights_scheduledchange"."created_at",
         "insights_scheduledchange"."created_by_id",
         "insights_scheduledchange"."updated_at"
  FROM "insights_scheduledchange"
  WHERE "insights_scheduledchange"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.45
  '''
  SELECT "insights_scheduledchange"."id",
         "insights_scheduledchange"."record_id",
         "insights_scheduledchange"."model_name",
         "insights_scheduledchange"."payload",
         "insights_scheduledchange"."scheduled_at",
         "insights_scheduledchange"."executed_at",
         "insights_scheduledchange"."failure_reason",
         "insights_scheduledchange"."failure_count",
         "insights_scheduledchange"."is_recurring",
         "insights_scheduledchange"."recurrence_interval",
         "insights_scheduledchange"."last_executed_at",
         "insights_scheduledchange"."end_date",
         "insights_scheduledchange"."team_id",
         "insights_scheduledchange"."created_at",
         "insights_scheduledchange"."created_by_id",
         "insights_scheduledchange"."updated_at"
  FROM "insights_scheduledchange"
  WHERE "insights_scheduledchange"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.46
  '''
  SELECT "insights_scheduledchange"."id",
         "insights_scheduledchange"."record_id",
         "insights_scheduledchange"."model_name",
         "insights_scheduledchange"."payload",
         "insights_scheduledchange"."scheduled_at",
         "insights_scheduledchange"."executed_at",
         "insights_scheduledchange"."failure_reason",
         "insights_scheduledchange"."failure_count",
         "insights_scheduledchange"."is_recurring",
         "insights_scheduledchange"."recurrence_interval",
         "insights_scheduledchange"."last_executed_at",
         "insights_scheduledchange"."end_date",
         "insights_scheduledchange"."team_id",
         "insights_scheduledchange"."created_at",
         "insights_scheduledchange"."created_by_id",
         "insights_scheduledchange"."updated_at"
  FROM "insights_scheduledchange"
  WHERE "insights_scheduledchange"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.47
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."key" = 'flag-1'
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.5
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."plugins_opt_in",
         "insights_team"."opt_out_capture",
         "insights_team"."event_names",
         "insights_team"."event_names_with_usage",
         "insights_team"."event_properties",
         "insights_team"."event_properties_with_usage",
         "insights_team"."event_properties_numerical",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.6
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.7
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.8
  '''
  SELECT "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at"
  FROM "insights_featureflag"
  WHERE "insights_featureflag"."id" = 99999
  ORDER BY "insights_featureflag"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.9
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
